# BBB-Application

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Makefile_disabled  README.md  conanfile.py
cmake/: CPM.cmake  LTO.cmake  codeCoverage.cmake  components.cmake  components.min  docs.cmake  execBashCommand.cmake  sanitizer.cmake  toolchain-arm.cmake  toolchain-bbb.cmake  toolchain-x86.cmake  tools.cmake  warnings.cmake
opt/: .gitignore  install-sdk.sh  track.md
scripts/dev/: source-arm-env.sh
sdk/: environment-setup.sh
src/LEDController/: CMakeLists.txt  LEDController.cpp  LEDController.hpp  main.cpp
src/LEDController/configured/: CMakeLists.txt  config.hpp.in
src/LEDController/tests/: CMakeLists.txt
src/appDemo/: CMakeLists.txt  Makefile  appDemo.cpp  appDemo.hpp  main.cpp
src/appDemo/configured/: CMakeLists.txt  config.hpp.in
src/appDemo/tests/: CLEDControllerTest.cpp  CMakeLists.txt
